# fish-3d-engine

./: .gitignore  CMakeLists.txt  README.md  build.sh  imgui.ini  vcpkg.json
.github/workflows/: ci.yml  release.yml
assets/sences/: fox
assets/shaders/: cube.vert  model.frag  model.vert  shadow.frag  shadow.vert  triangle.vert
doc/: 01-shadow-mapping.md  02-ecs-architecture.md  03-building-scenes.md  04-multi-light-model.md  05-shader-system.md  README.md
src/: main.cpp
src/graphics/: Buffer.cpp  Buffer.hpp  Camera.cpp  Camera.hpp  Framebuffer.cpp  Framebuffer.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Shader.cpp  Shader.hpp  Texture2D.cpp  Texture2D.hpp  VertexArray.cpp  VertexArray.hpp
src/scene/: Components.hpp  RenderSystem.cpp  RenderSystem.hpp  Scene.hpp  SceneSerializer.cpp  SceneSerializer.hpp
